<resources>
    <string name="app_name">Green House</string>
    <string name="home">홈</string>
    <string name="PSearch">식물 도감</string>
    <string name="MyPlant">나의 식물</string>
    <string name="Routine">루틴</string>
    <string name="Meditation">명상</string>

    <string name="drawer_opened">Opened Drawer</string>
    <string name="drawer_closed">Closed Drawer</string>
    <string name="default_client_id">938834192811-7pnmqlsa401dkjuki3v8c40ljed9lmne.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- naver 로그인 -->
    <string name="naver_client_id">lQtLEKIoSNLJmeByyw2Z</string>
    <string name="naver_client_secret">0OItoCHwaL</string>

    <!-- 홈화면 달성도 -->
    <string name="home_sprout">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;이미 싹은 틔워져 있으니 루틴 \n 하나만 달성해도 <b>멋진 식물</b>로 자라날 거에요!</string>
</resources>